libslic3r_gui_sources = [
    # 'pchheader.cpp',
    'Config/Snapshot.cpp',
    'Config/Version.cpp',
    'GUI/2DBed.cpp',
    'GUI/3DBed.cpp',
    'GUI/3DScene.cpp',
    'GUI/AboutDialog.cpp',
    'GUI/BackgroundSlicingProcess.cpp',
    'GUI/BedShapeDialog.cpp',
    'GUI/BitmapCache.cpp',
    'GUI/BonjourDialog.cpp',
    'GUI/ButtonsDescription.cpp',
    'GUI/Camera.cpp',
    'GUI/ConfigManipulation.cpp',
    'GUI/ConfigSnapshotDialog.cpp',
    'GUI/ConfigWizard.cpp',
    'GUI/DoubleSlider.cpp',
    'GUI/ExtraRenderers.cpp',
    'GUI/ExtruderSequenceDialog.cpp',
    'GUI/Field.cpp',
    'GUI/FirmwareDialog.cpp',
    'GUI/GCodeViewer.cpp',
    'GUI/Gizmos/GLGizmoBase.cpp',
    'GUI/Gizmos/GLGizmoCut.cpp',
    'GUI/Gizmos/GLGizmoFdmSupports.cpp',
    'GUI/Gizmos/GLGizmoFlatten.cpp',
    'GUI/Gizmos/GLGizmoHollow.cpp',
    'GUI/Gizmos/GLGizmoMove.cpp',
    'GUI/Gizmos/GLGizmoPainterBase.cpp',
    'GUI/Gizmos/GLGizmoRotate.cpp',
    'GUI/Gizmos/GLGizmoScale.cpp',
    'GUI/Gizmos/GLGizmosCommon.cpp',
    'GUI/Gizmos/GLGizmoSeam.cpp',
    'GUI/Gizmos/GLGizmoSlaSupports.cpp',
    'GUI/Gizmos/GLGizmosManager.cpp',
    'GUI/GLCanvas3D.cpp',
    'GUI/GLModel.cpp',
    'GUI/GLSelectionRectangle.cpp',
    'GUI/GLShader.cpp',
    'GUI/GLShadersManager.cpp',
    'GUI/GLTexture.cpp',
    'GUI/GLToolbar.cpp',
    'GUI/GUI_App.cpp',
    'GUI/GUI_Factories.cpp',
    'GUI/GUI_Init.cpp',
    'GUI/GUI_ObjectLayers.cpp',
    'GUI/GUI_ObjectList.cpp',
    'GUI/GUI_ObjectManipulation.cpp',
    'GUI/GUI_ObjectSettings.cpp',
    'GUI/GUI_Preview.cpp',
    'GUI/GUI_Utils.cpp',
    'GUI/GUI.cpp',
    'GUI/I18N.cpp',
    'GUI/ImGuiWrapper.cpp',
    'GUI/InstanceCheck.cpp',
    'GUI/Jobs/ArrangeJob.cpp',
    'GUI/Jobs/FillBedJob.cpp',
    'GUI/Jobs/Job.cpp',
    'GUI/Jobs/PlaterJob.cpp',
    'GUI/Jobs/RotoptimizeJob.cpp',
    'GUI/Jobs/SLAImportJob.cpp',
    'GUI/KBShortcutsDialog.cpp',
    'GUI/MainFrame.cpp',
    'GUI/MeshUtils.cpp',
    'GUI/Mouse3DController.cpp',
    'GUI/MsgDialog.cpp',
    'GUI/NotificationManager.cpp',
    'GUI/ObjectDataViewModel.cpp',
    'GUI/OG_CustomCtrl.cpp',
    'GUI/OpenGLManager.cpp',
    'GUI/OptionsGroup.cpp',
    'GUI/PhysicalPrinterDialog.cpp',
    'GUI/Plater.cpp',
    'GUI/Preferences.cpp',
    'GUI/PresetComboBoxes.cpp',
    'GUI/PresetHints.cpp',
    'GUI/PrintHostDialogs.cpp',
    'GUI/ProgressStatusBar.cpp',
    'GUI/RammingChart.cpp',
    'GUI/RemovableDriveManager.cpp',
    'GUI/SavePresetDialog.cpp',
    'GUI/Search.cpp',
    'GUI/Selection.cpp',
    'GUI/SysInfoDialog.cpp',
    'GUI/Tab.cpp',
    'GUI/UnsavedChangesDialog.cpp',
    'GUI/UpdateDialogs.cpp',
    'GUI/WipeTowerDialog.cpp',
    'GUI/wxExtensions.cpp',
    'Utils/ASCIIFolding.cpp',
    'Utils/AstroBox.cpp',
    'Utils/Bonjour.cpp',
    'Utils/Duet.cpp',
    'Utils/FixModelByWin10.cpp',
    'Utils/FlashAir.cpp',
    'Utils/HexFile.cpp',
    'Utils/Http.cpp',
    'Utils/OctoPrint.cpp',
    'Utils/PresetUpdater.cpp',
    'Utils/PrintHost.cpp',
    'Utils/Process.cpp',
    'Utils/Repetier.cpp',
    'Utils/Serial.cpp',
    'Utils/UndoRedo.cpp',
]

if os_apple
    # TODO:
    # slic3r_gui_sources += [
    #     'GUI/InstanceCheckMac.h',
    #     'GUI/InstanceCheckMac.mm',
    #     'GUI/Mouse3DHandlerMac.mm',
    #     'GUI/RemovableDriveManagerMM.h',
    #     'GUI/RemovableDriveManagerMM.mm',
    #     'Utils/MacDarkMode.mm',
    #     'Utils/RetinaHelperImpl.mm',
    # ]
endif


libslic3r_gui = static_library('slic3r_gui',
    libslic3r_gui_sources,

    dependencies: [
        cereal,
        clipper,
        osx_diskarbitration,
        eigen,
        imgui,
        libigl,
        libnest2d,
        libslic3r,
        miniz,
        wxwidgets,
        dbus,
        hidapi,
    ],
    include_directories: include_directories('GUI'),
)
